--- a/.env
+++ b/.env
@@ -28,7 +28,7 @@ DATABASE_URL="mysql://root:@127.0.0.1:3306/db_name?serverVersion=5.7&charset=utf
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/mailer ###
-MAILER_DSN=smtp://
+MAILER_DSN=smtp://96584d23b7eae4:6bc84843457681@smtp.mailtrap.io:2525?encryption=tls&auth_mode=login
 ###< symfony/mailer ###
 
 ###> symfony/lock ###
